<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云管理平台</string>
    <string name="login">登 录</string>
    <string name="account">输入用户名</string>
    <string name="password">输入密码</string>
    <string name="login_prompt">正在验证帐号…</string>
    <string name="auto_save_password">记住我</string>
    <string name="forgot_password">忘记密码</string>
    <string name="sending_request">发送请求中…</string>
    <string name="findback_pass">找回密码</string>
    <string name="reportinfotitle_str">完成情况</string>
    <string name="more_str">更多选项</string>
    <string name="control_str">操作</string>
    <string name="userid_str">用户名:</string>
    <string name="reportinfodes_str">情况描述：</string>
    <string name="userid_str_warning">请输入用户名</string>
    <string name="waring_str">提示：我们会将随机生成的密码发到你的注册手机上</string>
    <string name="find_back_str">找回</string>
    <string name="addreportbtn_str">添加</string>
    <string name="tasktype_str">任务类型：</string>
    <string name="response_person_str">责任人：</string>
    <string name="taskid_str">任务编号：</string>
    <string name="task_creator_str">任务制定人：</string>
    <string name="task_yanshou_str">验收人：</string>
    <string name="task_name_str">任务名称：</string>
    <string name="task_startdate_str">任务开始日期：</string>
    <string name="task_enddate_str">任务结束日期：</string>
    <string name="task_mj_str">任务密级：</string>
    <string name="task_status_str">任务状态：</string>
    <string name="task_fenguan_str">分管领导：</string>
    <string name="task_writedate_str">填报日期：</string>
    <string name="task_des_str">任务内容描述：</string>
    <string name="task_counts_str">子任务数：</string>
    <string name="export_btn_str">导出</string>
    <string name="title_str1">责任人</string>
    <string name="title_str2">标题</string>
    <string name="title_str3">状态</string>
    <string name="title_str4">完成度</string>
    <string name="title_str5">操作</string>
    <string name="title_str6">申请时间</string>
    <string name="title_str7">车牌号</string>
    <string name="title_str8">目的地</string>
    <string name="title_str9">状态</string>
    <string name="title_str10">描述</string>
    <string name="title_str11">时间</string>
    <string name="title_str12">操作</string>
    <string name="begintime_str">预计使用时间：</string>
    <string name="endtime_str">预计返程时间：</string>
    <string name="personnum_str">人数：</string>
    <string name="reason_str">申请事由：</string>
    <string name="destination_str">目的地：</string>
    <string name="remark_str">备注：</string>
    <string name="complete_str">完成</string>
    <string name="cancle_str">取消</string>
    <string name="add_str">添加</string>
    <string name="carlist_str">申请车辆：</string>
    <string name="relogin_str">切换帐号</string>
    <string name="exit_str">退出</string>
    <string name="tasksys_str">项目管理平台</string>
    <string name="carsys_str">车辆申请平台</string>
    <string name="search_str">搜索</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_refresh_lasttime">最近更新</string>
    <string name="more_data">更多</string>

</resources>