<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/main_tilte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="20.0sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_bg"
        android:orientation="vertical" >

        <GridView
            android:id="@+id/MenuGridView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="30dp" >
        </GridView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/more_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/title_bar"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/input2"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/more_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5.0dip"
                android:layout_toLeftOf="@+id/more_text"
                android:clickable="false"
                android:contentDescription="@string/app_name"
                android:src="@drawable/login_more_up" />

            <TextView
                android:id="@+id/more_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/more_str"
                android:textColor="#ffc6e6f9"
                android:textSize="16.0sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/morehidebottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="#ff005484" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="#ff0883cb" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/loginother_btn"
                    android:layout_width="1dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/chat_send_button_bg"
                    android:text="@string/relogin_str"
                    android:textSize="18.0sp" />

                <Button
                    android:id="@+id/exit_btn"
                    android:layout_width="1dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/chat_send_button_bg"
                    android:text="@string/exit_str"
                    android:textSize="18.0sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>