<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_bar"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/reportTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="20.0sp" />

        <Button
            android:id="@+id/addreport_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/addmenu_button_bg" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/splash"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:gravity="left"
                android:height="37dp"
                android:text="@string/title_str10"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/window_bg"
                android:textSize="17sp" >
            </TextView>

            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:height="37dp"
                android:text="@string/title_str11"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/window_bg"
                android:textSize="17sp" >
            </TextView>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:height="37dp"
                android:text="@string/title_str12"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/window_bg"
                android:textSize="17sp" >
            </TextView>
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="1.0px"
            android:layout_marginRight="1.0px"
            android:background="@color/black" />

        <ListView
            android:id="@+id/reportlistView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

</LinearLayout>